objects/XREFHSE__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ODNID__c</fullName>
        <label>ODNID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODS_ID__c</fullName>
        <label>ODS ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Relate_Id__c</fullName>
        <label>Role Relate Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>XREF HSE</label>
</CustomObject>